--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,7 @@ main {
     left: 0; 
     right: 0; 
     bottom: 0; 
-    background-image: url('/img/foodex.jpg'); 
+    background-image: url('https://clorostica.github.io/LittleLemon/img/foodex.jpg'); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
